web/css/app.css
html, body {
/*  background-color: #f0edda; */
  background-color: #969574;
  font-size: 13px;
}

/* The white background content wrapper */
.content {
  background-color: #fff;
  padding: 10px;
  margin: 0 -10px 25px -10px; /* negative indent the amount of the padding to maintain the grid system */
  -webkit-border-radius: 0 0 6px 6px;
     -moz-border-radius: 0 0 6px 6px;
          border-radius: 0 0 6px 6px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
          box-shadow: 0 1px 2px rgba(0,0,0,.15);
}

/* Page header tweaks */
.page-header {
  background-color: #f6f6f6;
  padding: 10px 10px 0px;
  margin: -10px -10px 0px;
}

#textpanel div {
  padding-bottom: 6px;
}

.term-name {
  color: #666;
  font-weight: 600;
}

#vispanel, #detailpanel {
  height: 700px;
}

#colorpanel {
  height: 25px;
}

/* large twipsy */
.bigtwips {
  padding: 20px;
  font-size: 16px;
  text-align: left;
}

/* question mark to hover over to see tooltips */
#helpIcon {
  background-color: #fff;
  border: 1px solid #999;
  margin-right: -5px;
  font-size: 20px;
  font-weight: 600;
  text-align: center;
  cursor: default;
  -webkit-border-radius: 5px;
     -moz-border-radius: 5px;
          border-radius: 5px;
  -webkit-box-shadow: 0 1px 2px rgba(0,0,0,.15);
     -moz-box-shadow: 0 1px 2px rgba(0,0,0,.15);
          box-shadow: 0 1px 2px rgba(0,0,0,.15);
}

#filterpanel {
  padding-bottom: 10px;
}

/* link to toggle between linear and log scale */
.axis-scale {
  font-size:90%;
  color: #666;
  text-decoration: underline;
}

.slider-container {
  text-align: left;
  padding-top: 8px;
}

.slider-label {
  margin-right: 25px;
}

.slider-value {
  width: 100px;
  border: 0;
  color: #999;
  font-size: 11px;
}

#detailpanel {

}

#details {
  display: none;
}

#detail-title {
  padding: 15px 0px;
}

#detail-list dd {
  padding-bottom: 4px;
}

#detail-film-value {
  color: #333;
  font-weight: 600;
  font-size: 18px;
  padding-right: 15px;
}

.detail-name {
  color: #999;
  font-size: 12px;
  padding-right: 10px;
}

.detail-value {
  color: #333;
  font-size: 13px;
}

/*
vispanelualizations
*/


/* Field name on the axis */
.axisTitle {
  cursor: default;
  stroke: none;
  fill: #777;
  font-size: 15px;
}

.axis {
  cursor: default;
  shape-rendering: crispEdges;
}

/* Line on the actual axis. Must be fill: none */
.axis path {
  fill: none;
  stroke-width: 0.8;
  stroke: #333;
}

/* Numeric tick labels */
.axis text {
  stroke: none;
  fill: #777;
  font-size: 11px;
}

/* Internal tick lines */
.axis line {
  stroke-width: 0.6;
  stroke: #999;
  stroke-opacity: .3;
}

/* Each of the points (or circles) in scatterplot */
.point {
  stroke: #fff;
  stroke-width: 0.75px;
  stroke-opacity: 0.8;
  fill: steelblue;
  fill-opacity: 0.8;
}

